k8s/tests/customers-service-delay.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: customers-service-delay
  namespace: petclinic
spec:
  hosts:
  - customers-service
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percentage:
          value: 100
    route:
    - destination:
        host: customers-service
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-gateway-retry
  namespace: petclinic
spec:
  hosts:
  - api-gateway
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx,connect-failure,refused-stream
    route:
    - destination:
        host: api-gateway
