k8s/tests/test-fault.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: customers-fault-injection
  namespace: petclinic
spec:
  hosts:
  - customers-service
  http:
  - fault:
      abort:
        percentage:
          value: 50
        httpStatus: 500
    retries:
      attempts: 0
      perTryTimeout: 2s
      retryOn: 5xx
    route:
    - destination:
        host: customers-service
        port:
          number: 80
