k8s/tests/test-retry-demo.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: customers-resilience-test
  namespace: petclinic
spec:
  hosts:
  - customers-service.petclinic.svc.cluster.local
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 50
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
    route:
    - destination:
        host: customers-service.petclinic.svc.cluster.local
        port:
          number: 8081
